Decode request directly to Http4s
Additionally, stopped using Try and use IO everywhere instead.

--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -11,7 +11,7 @@ package:
 
 functions:
   api:
-    handler: howardjohn.http4s.lambda.example.Route$EntryPoint::handle
+    handler: io.github.howardjohn.http4s.lambda.example.Route$EntryPoint::handle
     events:
       - http:
           path: "{proxy+}"
