Added Keep Warm event to example

--- a/example/serverless.yml
+++ b/example/serverless.yml
@@ -17,3 +17,8 @@ functions:
           path: "{proxy+}"
           method: any
           cors: true
+      - schedule:
+          rate: rate(4 minutes)
+          input:
+            httpMethod: GET
+            path: /hello/keepWarm
