--- a/.travis.yml
+++ b/.travis.yml
@@ -2,3 +2,22 @@ language: scala
 
 scala:
   - 2.12.10
+  - 2.13.1
+
+before_install:
+  - git fetch --tags
+
+stages:
+  - name: test
+  - name: release
+    if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
+
+jobs:
+  include:
+    - stage: test
+    - name: compile
+      script: sbt compile
+    - name: formatting
+      script: ./bin/scalafmt --test
+    - stage: release # Only runs if previous stages pass
+      script: sbt ci-release
