--- a/.travis.yml
+++ b/.travis.yml
@@ -6,7 +6,7 @@ before_install:
 stages:
   - name: test
   - name: release
-    if: ((branch = master AND type = push) OR (tag IS present)) AND NOT fork
+    if: ((branch = master AND type = push) OR (tag IS present)) AND repo=kellydavid/scala-server-lambda
 
 jobs:
   include:
@@ -16,4 +16,4 @@ jobs:
     # - name: formatting
     # script: ./bin/scalafmt --test
     - stage: release # Only runs if previous stages pass
-      script: sbt ci-release
+      script: sbt version ci-release
